@@ -30,11 +30,6 @@ The following options may be supplied to cmake:
                     ~/.thunderbird/xxxxxxx.default/chrome/userChrome.css
               Where xxxxxxx is a series of random characters.
 
-    -DQTC_FIX_FIREFOX_LOCATION_BAR=true
-       Attempt to add a background colour border around the icons that are within
-       the location and search entries on firefox's toolbar. This is a *very*
-       hackish fix - hence not being enabled by default.
-
     -DQTC_REORDER_GTK_DIALOG_BUTTONS=true
        When set QtCurve will try to manually re-order the buttons of Gtk
        dialogs. Note: This will cause errors to be printed to the console,
