@@ -14,6 +14,5 @@
 #cmakedefine QTC_REORDER_GTK_DIALOG_BUTTONS
 #cmakedefine QTC_OLD_MOZILLA
 #cmakedefine QTC_DEFAULT_TO_KDE3
-#cmakedefine QTC_FIX_FIREFOX_LOCATION_BAR
 
 #endif
