@@ -2461,18 +2461,19 @@ static gboolean qtInit()
                                         "{ xthickness = 3 ythickness = "Y"} " \
                                         "class \"*Button\" style \""QTC_RC_SETTING"Etch2\"" \
                                         "class \"*GtkOptionMenu\" style \""QTC_RC_SETTING"Etch2\""
+                #define QTC_ETCH_RC(T)  "style \""QTC_RC_SETTING"EtchE\" " \
+                                        "{ xthickness = "T" ythickness = "T" } " \
+                                        "style \""QTC_RC_SETTING"EtchS\" " \
+                                        "{ xthickness = "T" ythickness = "T" } " \
+                                        "widget_class \"*Toolbar*GtkSpinButton\" style \""QTC_RC_SETTING"EtchE\" " \
+                                        "class \"*GtkEntry\" style  \""QTC_RC_SETTING"EtchE\" " \
+                                        "widget_class \"*Toolbar*Entry\" style \""QTC_RC_SETTING"EtchE\" " \
+                                        "class \"*GtkSpinButton\" style \""QTC_RC_SETTING"EtchS\" "
                 gtk_rc_parse_string(opts.thinnerBtns ? QTC_ETCH2_RC("1") : QTC_ETCH2_RC("2"));
                 gtk_rc_parse_string("style \""QTC_RC_SETTING"Etch\" "
                                     "{ xthickness = 3 ythickness = 3 } "
                                     "widget_class \"*Toolbar*Entry\" style \""QTC_RC_SETTING"Etch\" ");
-                gtk_rc_parse_string("style \""QTC_RC_SETTING"EtchE\" "
-                                    "{ xthickness = 4 ythickness = 4 } "
-                                    "style \""QTC_RC_SETTING"EtchS\" "
-                                    "{ xthickness = 4 ythickness = 4 } "
-                                    "widget_class \"*Toolbar*GtkSpinButton\" style \""QTC_RC_SETTING"EtchE\" "
-                                    "class \"*GtkEntry\" style  \""QTC_RC_SETTING"EtchE\" " \
-                                    "widget_class \"*Toolbar*Entry\" style \""QTC_RC_SETTING"EtchE\" "
-                                    "class \"*GtkSpinButton\" style \""QTC_RC_SETTING"EtchS\" ");
+                gtk_rc_parse_string(isMozilla() ? QTC_ETCH_RC("3") : QTC_ETCH_RC("4"));
             }
 
             if(!opts.gtkScrollViews)
