@@ -2099,22 +2099,6 @@ debugDisplayWidget(widget, 3);
         gdk_region_destroy(region);
     }
 
-#ifdef QTC_FIX_FIREFOX_LOCATION_BAR
-    if(qtSettings.isBrowser && isMozilla() && WIDGET_ENTRY==w && widget && 28==origHeight && qtSettings.fontSize<=12)
-    {
-        gboolean search=GTK_IS_ENTRY(widget) && isFixedWidget(widget),
-                 location=!search && widget->parent && GTK_IS_COMBO_BOX_ENTRY(widget->parent) && isFixedWidget(widget->parent);
-
-        if(search || location)
-        {
-            cairo_new_path(cr);
-            cairo_rectangle(cr, xo+2.5, yo+2.5, search ? 39 : 25, heighto-5);
-            cairo_set_source_rgb(cr, QTC_CAIRO_COL(style->bg[GTK_STATE_NORMAL]));
-            cairo_stroke(cr);
-        }
-    }
-#endif
-
     drawBorder(cr, style, !widget || GTK_WIDGET_IS_SENSITIVE(widget) ? state : GTK_STATE_INSENSITIVE, area, NULL, xo, yo, widtho, heighto,
                colors, round, BORDER_SUNKEN, WIDGET_ENTRY, DF_DO_CORNERS|DF_BLEND);
     }
